--- a/User/workspaceStorage/f1680659564f23c27c8808a6ecb34469/redhat.java/jdt_ws/jdt.ls-java-project/.project
+++ b/User/workspaceStorage/f1680659564f23c27c8808a6ecb34469/redhat.java/jdt_ws/jdt.ls-java-project/.project
@@ -18,7 +18,12 @@
 		<link>
 			<name>src/binaryexponent.java</name>
 			<type>1</type>
-			<location>//home/am.lalwani/Desktop/competitiveprogramming/comptitivecodes/binaryexponent.java</location>
+			<location>/home/am.lalwani/Desktop/competitiveprogramming/comptitivecodes/binaryexponent.java</location>
+		</link>
+		<link>
+			<name>src/palindromepermutation.java</name>
+			<type>1</type>
+			<location>//home/am.lalwani/Desktop/competitiveprogramming/comptitivecodes/palindromepermutation.java</location>
 		</link>
 	</linkedResources>
 </projectDescription>
