--- a/User/settings.json
+++ b/User/settings.json
@@ -54,5 +54,7 @@
         }
     ],
     "editor.suggestSelection": "first",
-    "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue"
+    "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
+    "python.jediEnabled": false,
+    "terminal.integrated.rendererType": "dom"
 }
